intrinsic_add_module_library(IntrinsicGeometry)
set(target_name IntrinsicGeometry)

target_sources(${target_name}
        PUBLIC
        FILE_SET CXX_MODULES TYPE CXX_MODULES FILES
        Geometry.AABB.cppm
        Geometry.BVH.cppm
        Geometry.Capsule.cppm
        Geometry.Circulators.cppm
        Geometry.ContactManifold.cppm
        Geometry.Containment.cppm
        Geometry.ConvexHull.cppm
        Geometry.ConvexHullBuilder.cppm
        Geometry.Curve.cppm
        Geometry.Cylinder.cppm
        Geometry.DomainViews.cppm
        Geometry.EPA.cppm
        Geometry.Ellipsoid.cppm
        Geometry.Frustum.cppm
        Geometry.GJK.cppm
        Geometry.Graph.IO.cppm
        Geometry.Graph.ShortestPath.cppm
        Geometry.Graph.Utils.cppm
        Geometry.Graph.Vertex.Normals.cppm
        Geometry.Graph.cppm
        Geometry.Grid.cppm
        Geometry.HalfedgeMesh.AdaptiveRemeshing.cppm
        Geometry.HalfedgeMesh.Analysis.cppm
        Geometry.HalfedgeMesh.Boolean.cppm
        Geometry.HalfedgeMesh.Boundary.cppm
        Geometry.HalfedgeMesh.Builder.cppm
        Geometry.HalfedgeMesh.CatmullClark.cppm
        Geometry.HalfedgeMesh.Curvature.cppm
        Geometry.HalfedgeMesh.DEC.cppm
        Geometry.HalfedgeMesh.Geodesic.cppm
        Geometry.HalfedgeMesh.IO.cppm
        Geometry.HalfedgeMesh.Parameterization.cppm
        Geometry.HalfedgeMesh.Quality.cppm
        Geometry.HalfedgeMesh.Remeshing.cppm
        Geometry.HalfedgeMesh.Repair.cppm
        Geometry.HalfedgeMesh.Simplification.cppm
        Geometry.HalfedgeMesh.Smoothing.cppm
        Geometry.HalfedgeMesh.Subdivision.cppm
        Geometry.HalfedgeMesh.SubdivisionSqrt3.cppm
        Geometry.HalfedgeMesh.Utils.cppm
        Geometry.HalfedgeMesh.Vertices.Normals.cppm
        Geometry.HalfedgeMesh.VectorHeatMethod.cppm
        Geometry.HalfedgeMesh.cppm
        Geometry.Handle.cppm
        Geometry.HtexPatch.cppm
        Geometry.IO.cppm
        Geometry.ImplicitPlaneField.cppm
        Geometry.IntersectionClassification.cppm
        Geometry.KDTree.cppm
        Geometry.KMeans.cppm
        Geometry.Linalg.cppm
        Geometry.LinearSolver.cppm
        Geometry.MarchingCubes.cppm
        Geometry.Mesh.Conversion.cppm
        Geometry.MeshClosestFace.cppm
        Geometry.MeshSoup.cppm
        Geometry.MeshOperator.cppm
        Geometry.OBB.cppm
        Geometry.Octree.cppm
        Geometry.Overlap.cppm
        Geometry.PCA.cppm
        Geometry.Parameterization.Diagnostics.cppm
        Geometry.Plane.cppm
        Geometry.PointCloud.Conversion.cppm
        Geometry.PointCloud.IO.cppm
        Geometry.PointCloud.Normals.cppm
        Geometry.PointCloud.SurfaceSampling.cppm
        Geometry.PointCloud.Utils.cppm
        Geometry.PointCloud.cppm
        Geometry.Primitives.cppm
        Geometry.Properties.cppm
        Geometry.Quadric.cppm
        Geometry.Queries.cppm
        Geometry.Ray.cppm
        Geometry.Raycast.cppm
        Geometry.Registration.cppm
        Geometry.Robust.cppm
        Geometry.RobustPredicates.cppm
        Geometry.Rotation.cppm
        Geometry.RotationAveraging.cppm
        Geometry.SDF.cppm
        Geometry.SDFContact.cppm
        Geometry.Segment.cppm
        Geometry.Sparse.cppm
        Geometry.SpatialQueries.cppm
        Geometry.Sphere.Sampling.cppm
        Geometry.Sphere.cppm
        Geometry.Statistics.cppm
        Geometry.Support.cppm
        Geometry.SurfaceReconstruction.cppm
        Geometry.Triangle.cppm
        Geometry.UvAtlas.cppm
        Geometry.Validation.cppm
        Geometry.cppm
        PRIVATE
        Geometry.AABB.cpp
        Geometry.BVH.cpp
        Geometry.Capsule.cpp
        Geometry.ContactManifold.cpp
        Geometry.Containment.cpp
        Geometry.ConvexHull.cpp
        Geometry.ConvexHullBuilder.cpp
        Geometry.Curve.cpp
        Geometry.Cylinder.cpp
        Geometry.DomainViews.cpp
        Geometry.Ellipsoid.cpp
        Geometry.EPA.cpp
        Geometry.Frustum.cpp
        Geometry.GJK.cpp
        Geometry.Graph.IO.cpp
        Geometry.Graph.ShortestPath.cpp
        Geometry.Graph.Utils.cpp
        Geometry.Graph.Vertex.Normals.cpp
        Geometry.Graph.cpp
        Geometry.Grid.cpp
        Geometry.HalfedgeMesh.AdaptiveRemeshing.cpp
        Geometry.HalfedgeMesh.Analysis.cpp
        Geometry.HalfedgeMesh.Boolean.cpp
        Geometry.HalfedgeMesh.Boundary.cpp
        Geometry.HalfedgeMesh.Builder.cpp
        Geometry.HalfedgeMesh.CatmullClark.cpp
        Geometry.HalfedgeMesh.Curvature.cpp
        Geometry.HalfedgeMesh.DEC.cpp
        Geometry.HalfedgeMesh.Geodesic.cpp
        Geometry.HalfedgeMesh.IO.cpp
        Geometry.HalfedgeMesh.Parameterization.cpp
        Geometry.HalfedgeMesh.Quality.cpp
        Geometry.HalfedgeMesh.Remeshing.cpp
        Geometry.HalfedgeMesh.Repair.cpp
        Geometry.HalfedgeMesh.Simplification.cpp
        Geometry.HalfedgeMesh.Smoothing.cpp
        Geometry.HalfedgeMesh.Subdivision.cpp
        Geometry.HalfedgeMesh.SubdivisionSqrt3.cpp
        Geometry.HalfedgeMesh.Utils.cpp
        Geometry.HalfedgeMesh.Vertices.Normals.cpp
        Geometry.HalfedgeMesh.VectorHeatMethod.cpp
        Geometry.HalfedgeMesh.cpp
        Geometry.HtexPatch.cpp
        Geometry.ImplicitPlaneField.cpp
        Geometry.KDTree.cpp
        Geometry.KMeans.cpp
        Geometry.Linalg.cpp
        Geometry.MarchingCubes.cpp
        Geometry.Mesh.Conversion.cpp
        Geometry.MeshClosestFace.cpp
        Geometry.MeshSoup.cpp
        Geometry.OBB.cpp
        Geometry.Octree.cpp
        Geometry.Overlap.cpp
        Geometry.PCA.cpp
        Geometry.Parameterization.Diagnostics.cpp
        Geometry.Plane.cpp
        Geometry.PointCloud.Conversion.cpp
        Geometry.PointCloud.IO.cpp
        Geometry.PointCloud.Normals.cpp
        Geometry.PointCloud.SurfaceSampling.cpp
        Geometry.PointCloud.Utils.cpp
        Geometry.PointCloud.cpp
        Geometry.Properties.cpp
        Geometry.Quadric.cpp
        Geometry.Queries.cpp
        Geometry.Raycast.cpp
        Geometry.Registration.cpp
        Geometry.Robust.cpp
        Geometry.RobustPredicates.cpp
        Geometry.Rotation.cpp
        Geometry.RotationAveraging.cpp
        Geometry.SDF.cpp
        Geometry.Segment.cpp
        Geometry.Sphere.Sampling.cpp
        Geometry.Sphere.cpp
        Geometry.Statistics.cpp
        Geometry.Support.cpp
        Geometry.Sparse.cpp
        Geometry.SurfaceReconstruction.cpp
        Geometry.Triangle.cpp
        Geometry.UvAtlas.cpp
        Geometry.Validation.cpp
        PUBLIC
        FILE_SET CXX_MODULES TYPE CXX_MODULES FILES
        Geometry.Graph.Fwd.cppm
        Geometry.HalfedgeMesh.Fwd.cppm
        Geometry.PointCloud.Fwd.cppm
)

target_include_directories(${target_name} PUBLIC .)

target_link_libraries(${target_name}
        PUBLIC
        ExtrinsicCore
        glm::glm
        Eigen3::Eigen
)

target_link_libraries(${target_name} PRIVATE xatlas::xatlas)

target_compile_definitions(${target_name} PUBLIC EIGEN_MPL2_ONLY)
